--- a/config/database.yml
+++ b/config/database.yml
@@ -1,31 +1,6 @@
+default: &default
+  adapter: mysql2
+
 development:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  database: dcalen_development
-  pool: 5
-  username: dbdev
-  password: **********
-  host: localhost
-
-test:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  database: dcalen_test
-  pool: 5
-  username: dbtest
-  password: **********
-  host: localhost
-
-production:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  pool: 5
-  username: root
-  password: **********
-  host: localhost
-  database: dcalen_production
-  username: dbprod
-  password: <%= ENV['DCALEN_DATABASE_PASSWORD'] %>
+  <<: *default
+  database: primary_development
